--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -37,7 +37,7 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           # Upload entire repository
-          path: './src/main/webpage'
+          path: 'src/main/webapp'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
